[package]
name = "fusion_build_system"
version = "0.1.0-alpha"
edition = "2021" # The edition of the compiler to use when compiling this package
categories = ["development-tools"]
keywords = ["build-system", "fusion-build-system", "build", "system", "fusion"]
license = "MIT"
description = "A build system for the All programming language"
readme = "README.md"
rust-version = "1.71.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
